syntax = "proto3";

service AuthService {
    rpc CheckJwt(CheckJwtRequest) returns (CheckJwtResponse);
    rpc CheckAccountPermission(CheckAccountPermissionRequest) returns (CheckAccountPermissionResponse);
    rpc ViewAccountInformation(ViewAccountInformationRequest) returns (ViewAccountInformationResponse);
    rpc UpdateAccountInformation(UpdateAccountInformationRequest) returns (UpdateAccountInformationResponse);
}

message CheckJwtRequest {
    string accessToken = 1;
}

message CheckJwtResponse {
    optional string error = 1;
    optional int32 accountId = 2;
    optional string username = 3;
    optional string accessToken = 4;
}

message CheckAccountPermissionRequest {
    int32 accountId = 1;
    string permission = 2;
}

message CheckAccountPermissionResponse {
    bool hasPermission = 1;
}

message ViewAccountInformationRequest {
    int32 accountId = 1;
}

message ViewAccountInformationResponse {
    optional string error = 1;
    optional int32 accountId = 2;
    optional string username = 3;
    optional string email = 4;
    optional string firstName = 5;
    optional string lastName = 6;
    optional string createdAt = 7;
    optional string lastLogin = 8;
    optional bool isEmailVerified = 9;
    optional bool status = 10;
}

message UpdateAccountInformationRequest {
    int32 accountId = 1;
    optional string firstName = 2;
    optional string lastName = 3;
}

message UpdateAccountInformationResponse {
    optional string error = 1;
    optional string message = 2;
}
